jquery ui style and textarea overflow fix

--- a/static/css/sass/main.scss
+++ b/static/css/sass/main.scss
@@ -2,7 +2,7 @@
 $base-path-font: '/fonts/';
 $base-path-images: '/images/';
 $windows-radius: 10px;
-
+$room-bg-color: rgba(213,214,198,1);
 ///fontface
 //
 
@@ -45,7 +45,7 @@ body {
  min-width: 600px;
  &.chatroom {
   background: {
-    color: rgba(213,214,198,1);
+    color: $room-bg-color;
   }
  }
 }
@@ -160,7 +160,7 @@ header {
     color: rgba(47,167,1,1);
     padding: 20px;
     position: relative;
-    height: 70%;
+    height: 80%;
     width: 500px;
     background: {
       color: rgba(31,36,28,1);
@@ -168,20 +168,24 @@ header {
     border: {
       radius: $windows-radius;
     }
-    > p {
-      line-height: 20px;
-      &[data-usercolor="red"]:before {
-        color: rgba(167,1,28,1);
-      }
-      &[data-usercolor="orange"]:before {
-        color: rgba(167,87,1,1);
-      }
-      &[data-usercolor="yellow"]:before {
-        color: rgba(157,167,1,1);
-      }
-      &:before {
-        content: attr(data-username) ": ";
-        text-transform: capitalize;
+    > .output {
+      height: 80%;
+      overflow-x:auto;
+      > p {
+        line-height: 20px;
+        &[data-usercolor="red"]:before {
+          color: rgba(167,1,28,1);
+        }
+        &[data-usercolor="orange"]:before {
+          color: rgba(167,87,1,1);
+        }
+        &[data-usercolor="yellow"]:before {
+          color: rgba(157,167,1,1);
+        }
+        &:before {
+          content: attr(data-username) ": ";
+          text-transform: capitalize;
+        }
       }
     }
     &:after {
@@ -221,12 +225,12 @@ header {
         top: 2px dashed rgba(47,167,1,1);
       }
       #message {
-        width: 100%;
+        position:relative;
+        width: 460px;
         -webkit-appearance: none;
         background: none;
         height: 20px;
         line-height: 20px;
-        overflow: hidden;
         color: rgba(47,167,1,1);
         font: {
           size: 18px;
@@ -240,9 +244,15 @@ header {
         }
         &:before {
           content: ">";
+          height: 20px;
+          line-height: 20px;
+          width: 10px;
+          text: {
+            align: right;
+          }
           position: absolute;
-          left: 0;
-          top: 20px;
+          left: -20px;
+          top: 0;
         }
       }
     }
@@ -374,7 +384,76 @@ span {
 
 
 
+//
+///autocomplete
+//
 
+ul.ui-autocomplete {
+  background: {
+    color: rgba(31,36,28,1);
+  }
+  border: {
+    radius: $windows-radius;
+    width: 5px;
+    style: solid;
+    color: darken($room-bg-color,10%);
+  }
+  font: {
+    size: 18px;
+    family: CPMono;
+  }
+  color: rgba(47,167,1,1);
+  padding: 10px;
+  position: absolute;
+  z-index: 99;
+  li {
+    list-style: {
+      type: none;
+    }
+    &:first-child {
+      border: {
+        top-left-radius: $windows-radius;
+        top-right-radius: $windows-radius;
+      }
+    }
+    &:last-child {
+      border: {
+        bottom-left-radius: $windows-radius;
+        bottom-right-radius: $windows-radius;
+      }
+    }
+    a {
+      display: block;
+      width: 100%;
+      -webkit-user-select: none;
+      cursor: pointer;
+      &:focus {
+        outline:none;
+      }
+    }
+  }
+  &:after {
+    pointer-events: none;
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: {
+      radius: $windows-radius;
+    }
+    background: {
+      image: -webkit-linear-gradient(90deg, 
+                                     rgba(41,36,41,0.5),
+                                     rgba(41,36,41,0.5) 30%,
+                                     rgba(41,36,41,0) 30%,
+                                     rgba(41,36,41,0)100%);
+      repeat: repeat;
+      size: 3px 3px;
+    }
+  }
+}
 
 
 
